Add grayscale, contrast and hue manipulations

--- a/index.css
+++ b/index.css
@@ -1,17 +1,22 @@
 :root {
-  --color: red;
-  --size: 10px;
-  --blur: 10px;
+  --color: none;
+  --size: 0px;
+  --blur: 0px;
+  --grayscale: 0%;
+  --contrast: 100%;
+  --hue-rotate: 0deg;
   text-align: center;
   font-family: "Boogaloo", cursive;
   color: rgb(196, 160, 196);
   font-size: 20px;
+  background: linear-gradient(100deg, #ccffff, #ffcccc);
 }
 
 img {
   padding: var(--size);
   background: var(--color);
-  filter: blur(var(--blur));
+  filter: blur(var(--blur)) grayscale(var(--grayscale))
+    contrast(var(--contrast)) hue-rotate(var(--hue-rotate));
 }
 
 input[type="range"] {
