--- a/index.css
+++ b/index.css
@@ -8,8 +8,9 @@
   text-align: center;
   font-family: "Boogaloo", cursive;
   color: rgb(196, 160, 196);
-  font-size: 20px;
+  font-size: 1em;
   background: linear-gradient(100deg, #ccffff, #ffcccc);
+  height: 100vh;
 }
 
 img {
@@ -21,15 +22,43 @@ img {
 
 input[type="range"] {
   -webkit-appearance: none;
-  width: 10%;
   background: rgb(196, 160, 196);
 }
 
-.custom-file-input {
-  color: transparent;
+.flex {
+  display: flex;
 }
 
-.tab {
-  display: inline-block;
-  margin-left: 40px;
+.flex-column {
+  flex-direction: column;
+}
+
+.img-responsive {
+  max-height: 20em;
+  max-width: 20em;
+}
+
+label {
+  float: left;
+  width: 8em;
+  text-align: right;
+  margin-right: -4em;
+}
+
+input {
+  text-align: left;
+  cursor: pointer;
+}
+
+.input-color-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.input-color {
+  position: absolute;
+  right: 13em;
+  width: 4em;
+  height: 1em;
+  border: cadetblue;
 }
