--- a/index.css
+++ b/index.css
@@ -7,7 +7,11 @@
   --hue-rotate: 0deg;
   --spacing-small: 0.5rem;
   --spacing-medium: 1rem;
+}
+
+body {
   font-family: "Boogaloo", cursive;
+  background: linear-gradient(100deg, #ccffff, #ffcccc);
 }
 
 #user-img {
