--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@
 
 body {
   font-family: "Boogaloo", cursive;
+  color: rgb(196, 160, 196);
   background: linear-gradient(100deg, #ccffff, #ffcccc);
 }
 
